2005-12-18  Jeff Law  <law@redhat.com>

	* tree-ssa-dom.c (simplify_switch_and_lookup_avail_expr): Code
	to simplify SWITCH_EXPR_CODE moved from here to ...
	* tree-ssa-forwprop.c (simplify_switch_expr): Here.
	(tree-ssa-forward_propagate_single_use_vars): Call
	simplify_switch_expr when appropriate.

2005-12-17  Andrew Pinski  <pinskia@physics.uc.edu>

	* doc/objc.texi (Type encoding): Add documentation about encoding
	complex types and _Bool.

2005-12-17  Paul Brook  <paul@codesourcery.com>

	* config/m68k/m68k.md (m68k_output_function_prologue): Always call
	dwarf2out_def_cfa. Only add space for frame pointer to cfa_offset
	when frame_pointer_needed. 

2005-12-17  Gabriel Dos Reis  <gdr@integrable-solutions.net>

	* tree-vn.c (vn_add): Use XNEW.
	* tree-ssa-ccp.c (ccp_initialize): Use XNEWVEC.
	(ccp_fold): Likewise.
	(fold_stmt_r): Use explicit cast to convert from void *.
	* tree-outof-ssa.c (new_temp_expr_table): Use XCNEWVEC.
	(new_temp_expr_table): Likewise.
	* gimplify.c (lookup_tmp_var): Use XNEW.
	(gimplify_asm_expr): Use explcit cast to convert from void *.
	* tree-into-ssa.c (get_ssa_name_ann): Likewise.
	(get_def_blocks_for): Use XNEW.
	(add_to_repl_tbl): Likewise.
	(mark_def_sites): Use explicit cast to convert from void *.
	(def_blocks_free): Likewise.
	(mark_def_sites_initialize_block): Likewise.
	(update_ssa): Use XNEWVEC.
	* tree-dfa.c (create_var_ann): Use GGC_NEW.
	(create_stmt_ann): Likewise.
	(create_tree_ann): Likewise.
	(referenced_var_insert): Likewise.
	(set_default_def): Likewise.
	(referenced_var_lookup_if_exists): Use explicit cast to convert
	from void *.
	(referenced_var_lookup): Likewise.
	(default_def): Likewise.
	(set_default_def): Likewise.
	* tree-cfg.c (create_bb): Likewise.
	(edge_to_cases_cleanup): Likewise.
	(verify_node_sharing): Likewise.
	(record_switch_edge): Use XNEW.
	(cleanup_dead_labels): Use XCNEWVEC.
	(tree_duplicate_sese_region): Use XNEWVEC.
	* tree-scalar-evolution.c (get_instantiated_value): Likewise.