@@ -1,3 +1,9 @@
+2005-12-18  Dorit Nuzman  <dorit@il.ibm.com>
+
+	PR tree-optimization/24378	
+	* tree-vect-transform.c (vect_transform_loop): Create single-predecessor
+	basic-block after loop-versioning. 
+
 2005-12-18  Jeff Law  <law@redhat.com>
 
 	* tree-ssa-dom.c (simplify_switch_and_lookup_avail_expr): Code
